# assetpulse

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pipeline.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: sensor_lakehouse_pipeline.py
benchmarks/: pandas_vs_polars.py
config/: development.yaml  features.yaml  sensor_ranges.yaml
dashboard/: app.py  queries.py
data/gold/analytics/: dim_equipment.parquet  equipment_health_summary.parquet  fact_equipment_health.parquet
data/gold/ml_features/: ml_features.parquet
data/metadata/: machinaflow.duckdb
dbt/assetpulse/: dbt_project.yml  profiles.yml
dbt/machinaflow/: dbt_project.yml  profiles.yml
dbt/machinaflow/models/: schema.yml
scripts/: download_dataset.py  seed_data.py
src/ingestion/: __init__.py  cmapss_ingestor.py
src/monitoring/: __init__.py  pipeline_logger.py  run_tracker.py
src/storage/: __init__.py  storage_manager.py
src/transformations/: __init__.py  bronze_to_silver.py  feature_engineering.py  health_metrics.py
src/utils/: config.py  exceptions.py
src/validation/: __init__.py  completeness_checks.py  cycle_gap_checks.py  duplicate_checks.py  freshness_checks.py  quality_runner.py  range_checks.py  schema_checks.py  spike_checks.py
tests/integration/: test_pipeline.py
tests/unit/: test_cycle_gap_checks.py  test_duplicate_checks.py  test_feature_engineering.py  test_freshness_checks.py  test_health_score.py  test_ingestion.py  test_range_checks.py  test_rul.py  test_schema_checks.py  test_transformations.py
(+5 files in other folders)
