[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "machinaflow"
version = "0.1.0"
description = "Industrial Sensor Lakehouse & Predictive Maintenance Data Pipeline"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.8.0",
]
dbt = [
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]
all = [
    "machinaflow[airflow,dbt,dev]",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
]
